updated for php7 (mysql/mysqli, split()) and include config example for fortigate firewalls

--- a/config.php.example
+++ b/config.php.example
@@ -5,7 +5,7 @@ $dbpass="your-password";
 $dbname="pdns-db";
 $ns1="ns01.somedomain.tld"; 
 $ns2="ns02.somedomain.tld"; 
+$serverip="192.168.0.1";
 
-mysql_connect($dbhost, $dbuser, $dbpass) or die(mysql_error());
-mysql_select_db($dbname) or die(mysql_error());
+mysqli_connect($dbhost, $dbuser, $dbpass, $dbname) or die(mysql_error());
 ?>
